# raven_ros_basics

./: CMakeLists.txt  README.md  package.xml
launch/: cpp_talker.launch  draw_cube.launch  py_talker.launch
script/: autocircle_traj.py  draw_cube.py  raven_stub.py
scripts/: autocircle_traj.csv  autocircle_traj.py  draw_cube.py  py_talker.py  raven_stub.py
src/: cpp_talker.cpp
