<?xml version="1.0"?>
<package>
  <name>draw_cube</name>
  <version>0.1.0</version>
  <description>The draw_cube package</description>

  <maintainer email="aaron.snoswell@uqconnect.edu.au">Aaron Snoswell</maintainer>
  <license>MIT</license>
  <author email="aaron.snoswell@uqconnect.edu.au">Aaron Snoswell</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!--<build_depend>raven_2</build_depend>-->

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <!--<run_depend>raven_2</run_depend>-->

</package>
