<?xml version="1.0"?>
<package format="2">
  <name>raven_ros_basics</name>
  <version>0.0.1</version>
  <description>Basic examples of how to interface with the Raven 2 from ROS</description>

  <maintainer email="aaron.snoswell@uqconnect.edu.au">Aaron Snoswell</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/aaronsnoswell/raven_ros_basics</url>

  <author email="aaron.snoswell@uqconnect.edu.au">Aaron Snoswell</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>raven_2</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>raven_2</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>raven_2</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
